[gd_scene load_steps=12 format=3 uid="uid://b7m0fwh3eht0m"]

[ext_resource type="Script" uid="uid://bwbc2brjvrwlo" path="res://fire_ball.gd" id="1_33i64"]
[ext_resource type="Texture2D" uid="uid://c7xo3j1teh4k0" path="res://bandera/Sprite-0003.png" id="2_33i64"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qg8jd"]
atlas = ExtResource("2_33i64")
region = Rect2(0, 0, 7, 7)

[sub_resource type="SpriteFrames" id="SpriteFrames_qg8jd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg8jd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kqjno"]
radius = 3.66667

[sub_resource type="Curve" id="Curve_qg8jd"]
_limits = [0.0, 10.0, -3.0, 3.0]
_data = [Vector2(-2.35714, 0), 0.0, 0.0, 0, 0, Vector2(0.857143, 4.64286), 1.45014, 1.45014, 0, 0, Vector2(2.78571, 6.42857), 0.723854, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true
metadata/_snap_count = 28

[sub_resource type="Gradient" id="Gradient_33i64"]
offsets = PackedFloat32Array(0.380282, 0.64507, 0.915493)
colors = PackedColorArray(1, 0.737255, 0, 1, 0.934474, 0.375557, 0.0739198, 0.741176, 0.921569, 0.0666667, 0.0941176, 0.341176)

[sub_resource type="Curve" id="Curve_33i64"]
_limits = [0.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.506775, 106.554), 406.908, 406.908, 0, 0, Vector2(0.964912, 200), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_33i64"]
resource_name = "Banish"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0177038, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 0, 1), Color(1, 1, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:color_ramp")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.00576933, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1.46409),
"update": 1,
"values": [SubResource("Gradient_33i64"), SubResource("Gradient_33i64"), SubResource("Gradient_33i64")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [100, 10]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qg8jd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:color_ramp")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("Gradient_33i64")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [100]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_et0it"]
_data = {
&"Banish": SubResource("Animation_33i64"),
&"RESET": SubResource("Animation_qg8jd")
}

[node name="Fireball" type="Area2D"]
scale = Vector2(4, 4)
collision_mask = 6
gravity_space_override = 1
gravity = -810.305
script = ExtResource("1_33i64")
horizontal_speed = 300

[node name="Down" type="RayCast2D" parent="."]
target_position = Vector2(0, 11.3333)

[node name="Front" type="RayCast2D" parent="."]
position = Vector2(0, 2)
target_position = Vector2(7.66667, 0)
collision_mask = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 0, 1)
position = Vector2(2.88889, 6)
sprite_frames = SubResource("SpriteFrames_qg8jd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 6)
shape = SubResource("CircleShape2D_kqjno")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(2.88889, 6)
amount = 100
lifetime = 0.36
preprocess = 0.3
explosiveness = 0.1
randomness = 0.84
lifetime_randomness = 0.25
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(5, 0)
spread = 53.9
gravity = Vector2(0, -600)
angular_velocity_min = -427.25
angular_velocity_max = -7.91
damping_max = 59.281
scale_amount_min = 3.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_qg8jd")
color_ramp = SubResource("Gradient_33i64")
anim_speed_min = -7.55
anim_speed_max = 43.22
anim_speed_curve = SubResource("Curve_33i64")
anim_offset_max = 0.4675

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_et0it")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(3, 6)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
